# taskd

./: .gitignore  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: db.rs  error.rs  lib.rs  models.rs  names.rs  queries.rs
crates/server/: Cargo.toml
crates/server/src/: handlers.rs  main.rs  routes.rs
docs/: agent-architecture.md  database.md  open-questions.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: api.ts  dom.ts  main.ts  router.ts  style.css
frontend/src/components/: project-list.ts  task-board.ts  task-detail.ts
tests/: cli_e2e.sh
