[package]
name = "taskd"
version = "0.1.0"
edition = "2021"
description = "CLI for taskd — lightweight project management for AI agent workflows"
license = "MIT"
authors = ["Isaac Ireland"]

[dependencies]
taskd-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
reqwest = { version = "0.12", features = ["json", "blocking"], default-features = false, optional = true }

[features]
default = ["remote"]
remote = ["reqwest"]
